--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
 
 /* Navigation menu CSS */
 nav {
-    background-color: #5d90db;
+    background: #4276c3;
     border-bottom: 2px solid black;
     overflow: hidden;
     position: fixed;
@@ -46,7 +46,7 @@ nav ul li a {
 
 nav .Navigation_element {
     text-align: center;
-    background: #4CADFF;
+    background: #5b96c6;
     transition: 1.0s;
     padding: 20px 40px;
 }
@@ -68,6 +68,154 @@ nav ul .Right {
     background-position: center;
 }
 
+
+main {
+    margin-top: 90px;
+}
+
+/* Header */
+
+header {
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0px;
+    padding: 20px;
+}
+
+header div {
+    width: 100%;
+    border-radius: 50px;
+    text-align: center;
+    align-self: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 50px;
+    margin: auto;
+    background-color: rgb(104, 150, 176);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+code {
+    background-color: black;
+    border-radius: 12px;
+    color: limegreen;
+    padding: 4px;
+}
+
+
+
+
+
+
+body.Home .features {
+    text-align: center;
+    font-size: 31px;
+    background-color: #B1E5F7;
+    padding-bottom: 60px;
+}
+
+body.Home .features h1 {
+    margin-top: 0px;
+    padding-top: 41px;
+}
+
+body.Home .features ul {
+    list-style-type: none;
+    margin-right: 50px;
+    margin-left: 50px;
+    margin-bottom: 0px;
+    padding-bottom: 20px;
+}
+
+body.Home .features li {
+    padding-bottom: 12px;
+}
+
+body.Home header {
+    background-image: url(images/HeroImage.png);
+}
+
+body.Home header div {
+    background-color: #0A739C;
+    color: #88e1ff;
+}
+
+body.Home .ListImg {
+    background-color: lightgrey;
+    border-radius: 12px 0px 0px 12px;
+    margin-right: 0px;
+}
+
+body.Home .ListImg img {
+    margin: 10px;
+    border-radius: 12px;
+    height: fit-content;
+}
+
+body.Home .ListText {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background-color: lightgray;
+    font-size: 21px;
+    padding-right: 20px;
+    padding-left: 12px;
+    border-radius: 0px 12px 12px 0px;
+}
+
+body.Home .ListText h2 {
+    font-size: 30px;
+}
+
+
+/* @media */
+@media screen and (min-width: 1000px) {
+    body.Home .ListText {
+        text-align: start;
+    }
+
+    body.Home .ListImg img {
+        height: 200px;
+        float: left;
+    }
+
+    nav ul .Right {
+        opacity: 1;
+    }
+
+
+    .sidebar {
+        position: fixed;
+        z-index: 10;
+        overflow: hidden;
+        height: 80%;
+        top: 90px;
+        width: 250px !important;
+        margin: 20px;
+        display: block;
+    }
+
+    .redirect_button a {
+        width: 300px;
+    }
+}
+
 /* Footer */
 footer {
     background-color: #88e1ff;
@@ -81,6 +229,7 @@ footer {
     bottom: 0;
     z-index: 11;
 }
+
 
 /* Notes */
 .note {
@@ -148,262 +297,4 @@ footer {
 .github_button a {
     background-color: #b7bfb8 !important; 
    
-}
-/* Header */
-
-header {
-    background-size: cover;
-    background-repeat: no-repeat;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 0px;
-    padding-top: 200px;
-    padding-bottom: 200px;
-}
-
-header div {
-    width: 700px;
-    border-radius: 50px;
-    text-align: center;
-    align-self: center;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 50px;
-    margin: auto;
-}
-
-
-code {
-    background-color: black;
-    border-radius: 12px;
-    color: limegreen;
-    padding: 4px;
-}
-
-
-/* Independent CSS */
-
-
-/* On just the home page */
-body.Home main {
-    margin-top: 90px;
-}
-
-body.Home .features {
-    text-align: center;
-    font-size: 31px;
-    background-color: #B1E5F7;
-    padding-bottom: 60px;
-}
-
-body.Home .features h1 {
-    margin-top: 0px;
-    padding-top: 41px;
-}
-
-body.Home .features ul {
-    list-style-type: none;
-    margin-right: 50px;
-    margin-left: 50px;
-    margin-bottom: 0px;
-    padding-bottom: 20px;
-}
-
-body.Home .features li {
-    padding-bottom: 12px;
-}
-
-body.Home header {
-    background-image: url(images/HeroImage.png);
-}
-
-body.Home header div {
-    background-color: #0A739C;
-    color: #88e1ff;
-}
-
-body.Home .ListImg {
-    background-color: lightgrey;
-    border-radius: 12px 0px 0px 12px;
-    margin-right: 0px;
-}
-
-body.Home .ListImg img {
-    margin: 10px;
-    border-radius: 12px;
-    height: fit-content;
-}
-
-body.Home .ListText {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    background-color: lightgray;
-    font-size: 21px;
-    padding-right: 20px;
-    padding-left: 12px;
-    border-radius: 0px 12px 12px 0px;
-}
-
-body.Home .ListText h2 {
-    font-size: 30px;
-}
-
-/* Just the about page */
-body.About main {
-    display: flex;
-    margin-top: 90px;
-    flex-direction: column;
-}
-
-body.About .content {
-    background-color: #B1E5F7;
-    height: fit-content;
-    position: relative;
-    padding: 12px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 100px;
-    padding-top: 20px;
-    flex-direction: column;
-}
-
-body.About .sidebar {
-    width: 100%;
-    color: lightblue;
-    text-align: center;
-    background-color: grey;
-    border-radius: 12px;
-    margin-top: 20px;
-    margin-bottom: 100px;
-}
-
-body.About .sidebar_content {
-    text-align: left;
-    padding-left: 30px;
-}
-
-body.About .sidebar_content ul {
-    list-style: none;
-    padding-left: 0;
-    font-size: large;
-}
-
-body.About .sidebar_content ul li ul {
-    text-align: left;
-    padding-left: 20px;
-}
-
-body.About .sidebar_content ul li ul a {
-    color: #88e1ff;
-}
-
-body.About .sidebar_top {
-    height: 60px;
-    font-size: 20px;
-}
-
-body.About .sidebar_content a {
-    color: white;
-    text-decoration: none;
-}
-
-body.About .content h1 {
-    font-size: 25px;
-    background-color: rgb(112, 193, 220);
-    padding: 12px;
-}
-
-body.About .content h2 {
-    font-size: 19px;
-    background-color: rgb(112, 220, 200);
-    padding: 12px;
-    margin-bottom: 20px;
-}
-
-body.About .About_Image img {
-    width: 241px;
-    height: 241px;
-    border: 1px solid black;
-    border-radius: 12px;
-    margin-left: 0px;
-    margin: 20px;
-    background-color: white;
-}
-
-body.About .About_Image figcaption {
-    flex: 1;
-}
-
-/* Just the projects page */
-body.projects .content {
-    padding: 70px 20px 70px 20px;
-}
-body.projects .content ol {
-    list-style-type: none;
-    padding-left: 0px;
-}
-body.projects .content h1 {
-    font-size: 25px;
-    background-color: rgb(112, 193, 220);
-    padding: 12px;
-}
-
-body.projects .content h2 {
-    font-size: 19px;
-    background-color: rgb(112, 220, 200);
-    padding: 12px;
-    margin-bottom: 20px;
-}
-
-body.projects .content h3 {
-    background-color: rgb(28, 176, 122);
-    padding: 12px;
-    margin-bottom: 20px;
-}
-
-/* @media */
-@media screen and (min-width: 1000px) {
-    body.Home .ListText {
-        text-align: start;
-    }
-
-    body.Home .ListImg img {
-        height: 200px;
-        float: left;
-    }
-
-    body.About main {
-        flex-direction: row;
-    }
-
-    body.About .About_Image {
-        display: flex;
-        align-items: flex-start;
-    }
-
-    body.About .content {
-        flex: 1;
-        padding-left: 290px;
-    }
-
-    nav ul .Right {
-        opacity: 1;
-    }
-
-
-    .sidebar {
-        position: fixed;
-        z-index: 10;
-        overflow: hidden;
-        height: 80%;
-        top: 90px;
-        width: 250px !important;
-        margin: 20px;
-        display: block;
-    }
-
-    .redirect_button a {
-        width: 300px;
-    }
 }
